--- a/c/.vscode/settings.json
+++ b/c/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "stdio.h": "c",
-        "limits.h": "c"
+        "limits.h": "c",
+        "stdbool.h": "c"
     }
 }
