--- a/c/.vscode/settings.json
+++ b/c/.vscode/settings.json
@@ -2,6 +2,9 @@
     "files.associations": {
         "stdio.h": "c",
         "limits.h": "c",
-        "stdbool.h": "c"
+        "stdbool.h": "c",
+        "cmath": "c",
+        "*.tcc": "c",
+        "cstdlib": "c"
     }
 }
