--- a/c/.vscode/settings.json
+++ b/c/.vscode/settings.json
@@ -5,6 +5,8 @@
         "stdbool.h": "c",
         "cmath": "c",
         "*.tcc": "c",
-        "cstdlib": "c"
+        "cstdlib": "c",
+        "compare": "c",
+        "limits": "c"
     }
 }
