--- a/c/.vscode/settings.json
+++ b/c/.vscode/settings.json
@@ -7,6 +7,7 @@
         "*.tcc": "c",
         "cstdlib": "c",
         "compare": "c",
-        "limits": "c"
+        "limits": "c",
+        "stdlib.h": "c"
     }
 }
